# framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ECOSYSTEM_DOCTRINE.md  LICENSE  QUICK_START.md  README.md  __init__.py  agent_base.py  agent_registry.py  assemble_genesis.py  cli  diagnose_genesis.py  mcp  message_types.py  package-lock.json  protocol.py  pyproject.toml  pytest.ini  requirements.txt  run_genesis_tests.py  simple_diag.py  templates  test_genesis_init.py  validate_project.py
agents/: __init__.py  ai_ready.py  architect.py  backend.py  base_agent.py  deploy.py  devops.py  frontend.py  performance.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  create.py  deploy.py  doctor.py  generate.py  init.py  utils.py
cli/ui/: console.py
core/: __init__.py  config.py  exceptions.py  orchestrator.py
docs/: agents.md  api-reference.md  deployment.md  installation.md  mcp-protocol.md  migration.md  templates.md  tutorial.md
examples/: demo_complete.py
genesis_engine/: __init__.py  genesis_agent.py  tasking.py
genesis_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
genesis_engine/agents/: ai_ready.py  architect.py  backend.py  base_agent.py  deploy.py  devops.py  frontend.py  performance.py
genesis_engine/cli/: __init__.py  main.py  utils.py
genesis_engine/core/: __init__.py  config.py  (+4 more)
golden_path/: __init__.py  saas_basic.py
mcp/: __init__.py  agent_base.py  agent_registry.py  message_types.py  protocol.py
mi-app/: .env.example  .gitignore  README.md  docker-compose.yml  genesis.json
my-saas-app/: README.md  SECURITY.md  docker-compose.yml  genesis.json
templates/: __init__.py  engine.py
tests/: conftest.py  test_agent_base_async.py  test_agents_instantiation.py  test_ai_ready_agent.py  test_architect_agent.py  test_backend_generation.py  test_cli.py  test_cli_deploy.py  test_cli_generate.py  test_cli_help.py  test_critical_mcp_agents.py  test_dependencies.py  test_deploy_cloud.py  test_devops_agent.py  test_end_to_end_integration.py  test_environment_validator.py  test_frontend_generation.py  test_genesis_framework.py  test_logging_setup.py  test_mcp_message_defaults.py  test_orchestrator.py  test_performance_agent.py  test_protocol_tasks.py  test_template_engine.py  test_validation_config.py
utils/: __init__.py
(+100 files in other folders)
