[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-engine"
version = "1.0.0"
description = "Sistema operativo completo para desarrollo y despliegue de aplicaciones full-stack"
authors = [{name = "Genesis Team", email = "team@genesis.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "GitPython>=3.1.40",
    "docker>=6.1.3",
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
]

[project.urls]
Homepage = "https://github.com/genesis-engine/genesis-engine"
Documentation = "https://docs.genesis-engine.dev"
Repository = "https://github.com/genesis-engine/genesis-engine"
"Bug Reports" = "https://github.com/genesis-engine/genesis-engine/issues"

[project.scripts]
genesis = "genesis_engine.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["genesis_engine*"]

[tool.setuptools.package-data]
genesis_engine = ["templates/**/*", "templates/**/**/*"]