[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-engine"
version = "1.0.0"
description = "Sistema operativo completo para desarrollo y despliegue de aplicaciones full-stack"
authors = [{name = "Genesis Team", email = "team@genesis-engine.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0", 
    "jinja2>=3.1.2",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "GitPython>=3.1.40",
    "docker>=6.1.3",
    "fastapi>=0.115.14",
    "sqlalchemy>=2.0.23",
    "httpx>=0.24.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["genesis_engine*"]
exclude = ["tests*"]

